--- a/index.html
+++ b/index.html
@@ -735,9 +735,8 @@ My current research examines how designers and engineers form mental models of A
 								</div>
 							</div>
 						</div>
-						<hr style="margin: 3px 0; border: 0; border-top: 1px solid #ddd;">
-						<div class="row" style="position: relative;">
-							<div style="position: absolute; left: 50%; top: -40px; bottom: -40px; width: 1px; background-color: #ddd; z-index: 1;"></div>
+						<hr style="margin: 10px 0; border: 0; border-top: 1px solid #ddd;">
+						<div class="row">
 							<div class="col-sm-4">
 								<div class="single-profile">
 									<div class="profile-txt">
